Added white sheet theme

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --sheet-text: #29292d;
+  --sheet-background: #DDD;
+  --sheet-outline: #516c8a;
+  --sheet-accent: #5b65eb;
+  --sheet-shadow: #0005;
+  --sheet-chord-text: #DDD;
+}
+
 * {
   box-sizing: border-box;
 }
