Added color palette icon on option bar and changed main page appearance

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --sheet-text: #29292d;
-  --sheet-background: #DDD;
+  --sheet-background: #F0F0F0;
   --sheet-outline: #516c8a;
   --sheet-accent: #5b65eb;
   --sheet-shadow: #0005;
