--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
   --sheet-text: #29292d;
   --sheet-background: #F0F0F0;
   --sheet-outline: #516c8a;
-  --sheet-accent: #5b65eb;
+  --sheet-chord: #5b65eb;
   --sheet-shadow: #0005;
   --sheet-chord-text: #DDD;
 }
